--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,16 @@
-.App {
-  text-align: center;
+.leaves {
+  position: fixed;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.leaves--top {
+  top: -10px;
+  right: -20px;
+  width: 350px;
+  z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.leaves--bottom {
+  bottom: -30px;
+  left: -20px;
+  width: 650px;
 }
