--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Satisfy|Lato:300,400');
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.4;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Satisfy', cursive;
+  margin: 0 0 1rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  margin: 0 0 1rem;
 }
