--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,11 +1,11 @@
 main {
     max-width: 1080px;
     margin: 0 auto;
-    height: 70vh;
+    min-height: 60vh;
     position: relative;
     z-index: 2;
     padding: 20px;
-    background-color: #ffffffc2;
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
 @media  screen and (min-width: 600px) {
