--- a/src/components/Rsvp.css
+++ b/src/components/Rsvp.css
@@ -1,5 +1,5 @@
 form {
-    max-width: 400px;
+    max-width: 600px;
 }
 
 form input,
@@ -7,14 +7,16 @@ form textarea {
     width: 100%;
     padding: 12px;
     margin: 6px 0 4px;
-    border: 1px solid #ccc;
-    background: #fafafa;
-    color: #000;
+    border: 2px solid #333;
+    background: white;
+    color: #333;
     font-family: sans-serif;
     font-size: 12px;
     line-height: normal;
     box-sizing: border-box;
     border-radius: 2px;
+    font-family: inherit;
+    font-size: 16px;
 }
 
 form input[type="submit"] {
@@ -25,8 +27,32 @@ form input[type="submit"] {
     display: inline-block;
     font-weight: bold;
     letter-spacing: 2px;
+    width: fit-content;
 }
 
 form input[type="submit"]:hover {
     cursor: pointer;
+}
+
+form input[type="radio"] {
+    width: auto;
+    margin-right: 10px;
+}
+
+form .radios {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+@media  screen and (min-width: 600px) {
+    form .radios {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+form .radio {
+    display: flex;
+    align-items: center;
 }
