--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -39,8 +39,10 @@
     color: white;
     border: 2px solid #ffacba;
     transition: background-color 0.2s ease;
+    margin-bottom: 40px;
 }
 
 .home__cta:hover {
+    color: white;
     background-color: #ffacba;
 }
