--- a/src/components/Rsvp.css
+++ b/src/components/Rsvp.css
@@ -19,6 +19,10 @@ form textarea {
     font-size: 16px;
 }
 
+form textarea {
+    min-height: 110px;
+}
+
 form input[type="submit"] {
     background: #333;
     color: white;
